@startuml example
hide empty members

interface Vehicle{
    + String getDescription()
    + String getLicensePlateNumber()
    + String toString()
}

class Motorcycle{
    - String description
    - String licensePlateNumber
    + Motorcycle(String description, String licensePlateNumber)
}

class Car{
    - String description
    - String licensePlateNumber
    + Car(String description, String licensePlateNumber)
}

class Garage<T>{
    - List<Vehicle> vehicles
    + void addVehicle(Vehicle vehicle)
    + Iterator<Vehicle> createIterator()
}

Garage o-- Vehicle
Vehicle <|-- Motorcycle
Vehicle <|-- Car

@enduml 